[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ember-extract"
version = "0.3.1"
description = "Extract and download media from 15 social services (an embeddable cobalt-like library)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["requests>=2.25"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
]

[project.optional-dependencies]
# --cookies-from-browser работает без зависимостей для Firefox и Windows-Chromium;
# yt-dlp нужен лишь как fallback (например Chromium на macOS/Linux)
browser = ["yt-dlp"]
dev = ["pytest>=7"]

[project.scripts]
ember = "ember.__main__:main"

[tool.setuptools.packages.find]
include = ["ember*"]

[tool.setuptools.package-data]
ember = ["py.typed"]
